--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,13 @@ line-height: 1.14;
     color: var(--link-color);
 }
 
+
+.logo:hover,
+.logo:focus {
+background-color: var(--link-color);
+color: #fff;
+}
+
 /* nav */
 
 .site-nav .link {
@@ -68,7 +75,6 @@ color: var(--link-color);
 .hero-title {
     color: #fff;
     background-color: #2F303A;
-    font-style: normal;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -80,6 +86,13 @@ color: var(--link-color);
 .button {
     color: #fff;
     background-color: var(--link-color);
+    cursor: pointer;
+}
+
+.button:hover,
+.button:focus {
+color: var(--text-color);
+background-color: #F5F4FA;  
 }
 
 
@@ -107,12 +120,12 @@ color: var(--link-color);
     color: var(--text-color);
     font-weight: 500;
     font-size: 16px;
-    line-height: 19px;
+    line-height: 1.16;
 }
 
 .team .text {
     font-size: 16px;
-line-height: 19px;
+line-height: 1.16;
 }
 
 /* footer */
@@ -128,13 +141,50 @@ line-height: 19px;
     color: #fff;
     font-style: normal;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.71;
     text-decoration: none;
     font-style: none;
+}
+
+.address:hover,
+.address:focus {
+    color: var(--link-color);
 }
 
 .foot .link {
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
     font-style: normal;
+}
+
+.foot .link:focus,
+.foot .link:hover {
+    color: var(--link-color);
+}
+
+/* portfolio */
+
+.project .button {
+color: var(--text-color);
+background-color: #F5F4FA;
+cursor: pointer;
+}
+
+.project .button:hover,
+.project .button:focus {
+    color: #fff;
+    background-color: var(--link-color);
+}
+
+.portfolio .title {
+    color: #212121;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;    
+}
+
+.portfolio .text {
+    font-size: 16px;
+    line-height: 2; 
 }
